<resources>
    <string name="app_name">Class Registration Helper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user id</string>
    <string name="nav_header_desc">Profile picture</string>
    <string name="action_settings">Settings</string>
    <string name="toast_internet_error">Can\'t connect to the internet, please try again later</string>
    <string name="toast_unknown_error">Encountered unknown error, please try again later</string>
    <string name="toast_register_unknown_error">Encountered unknown error while registering the class, please try again later</string>
    <string name="toast_register_error">"Registration failed: "</string>
    <string name="toast_register_success">Course registered successfully!</string>
    <string name="toast_drop_success">Course dropped successfully!</string>
    <string name="toast_drop_error">Encountered unknown error while dropping the class, please try again later</string>
    <string name="notif_unknown_err_title">Encountered unknown error while registering for classes</string>
    <string name="notif_unknown_err_content">Please try again later, it could be the internet, or the website, or this app that has failed you.</string>
    <string name="about_text">I\'m Jack. Nice to meet you!</string>
    <string name="get_course_url">https://mystudentrecord.ucmerced.edu/pls/PROD/xhwschedule.P_ViewCrnDetail</string>
    <string name="get_catalog_url">https://mystudentrecord.ucmerced.edu/pls/PROD/xhwschedule.P_ViewSchedule</string>
    <string name="get_request_catalog_url">https://mystudentrecord.ucmerced.edu/pls/PROD/xhwschedule.P_selectsubject</string>
    <string name="get_faculty_directory_url">https://www.ucmerced.edu/faculty-directory</string>
    <string name="faculty_detail_root_url">https://www.ucmerced.edu</string>
    <string name="get_my_list_url">https://mystudentrecord.ucmerced.edu/pls/PROD/bwskfreg.P_AltPin</string>
    <string name="register_courses_url">https://mystudentrecord.ucmerced.edu/pls/PROD/bwckcoms.P_Regs</string>
    <string name="register_cas_request_url">https://cas.ucmerced.edu/cas/login?service=https%3a//mystudentrecord.ucmerced.edu/pls/PROD/twbkwbis.P_WWWLogin%3fret_code%3d</string>
    <string name="profile_cas_request_url">https://cas.ucmerced.edu/cas/login?service=https%3A%2F%2Ficatcard.ucmerced.edu%2Fmobileid%2Fprofile.php</string>
    <string name="get_profile_url">https://icatcard.ucmerced.edu/mobileid/profile.php</string>
    <string name="disclaimer_text">Your account information will only be used for accessing your basic information, course list and registering classes. It will not be shared with any third party.\nAll communication are established solely with UCM servers and are conducted with standard HTTPS/SSL protocols, but this doesn\'t mean all risk factors are eliminated. Use at your own risk!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="perm_get_session_url">perm_get_session_url</string>
    <string name="castgc_cookie">castgc_cookie</string>
    <string name="session_id">session_id</string>
    <string name="user_name">user_name</string>
    <string name="user_student_id">user_student_id</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="perm_get_profile_session_url">perm_get_profile_session_url</string>
    <string name="profile_castgc_cookie">profile_castgc_cookie</string>
    <string name="profile_session_for_id">profile_session_for_id</string>
    <string name="profile_pic_str">profile_pic_base64</string>
    <string name="my_course_selection_urls">my_course_selection_urls</string>
    <string name="my_selection_crn_set">my_selection_crn_set</string>
    <string name="my_registered_crn_set">my_registered_crn_set</string>
    <string name="my_course_registered_status_list">my_course_registered_status_list</string>
    <string name="pref_header_general">General</string>
    <string name="pref_key_valid_term_values">pref_key_valid_terms</string>
    <string name="pref_key_valid_term_names">pref_key_valid_term_names</string>
    <string name="pref_key_valid_major_values">pref_key_valid_major_values</string>
    <string name="pref_key_valid_major_names">pref_key_valid_major_names</string>
    <string name="last_sync_time">last_sync_time</string>
    <string name="pref_key_only_show_open_classes">only_show_open_classes</string>
    <string name="pref_title_only_show_open_classes">Only show open classes</string>
    <string name="pref_content_only_show_open_classes">Show classes that still has seats available</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_key_sys_notif_setting">pref_key_sys_notif_setting</string>
    <string name="pref_title_sys_notif_setting">System notification settings</string>
    <string name="pref_key_notif">pref_key_notif</string>
    <string name="pref_title_notif">Show notifications</string>
    <string name="pref_content_notif">Notify me when classes on my list are available.</string>
    <string name="pref_title_major">Choose Majors</string>
    <string name="pref_key_major">pref_key_major</string>
    <string name="changed_settings">changed_settings</string>
    <string name="pref_key_term">pref_key_term</string>
    <string name="pref_title_term">Choose Term</string>
    <string name="pref_key_auto_reg">pref_key_auto_reg</string>
    <string name="pref_title_auto_reg">Auto Register</string>
    <string name="pref_content_auto_reg">Auto register courses on my list if they become available</string>
    <string name="pref_key_auto_check">pref_key_auto_check</string>
    <string name="pref_title_auto_check">Auto Check</string>
    <string name="pref_content_auto_check">Regularly check in the background for the availability of courses on my list</string>
    <string name="pref_key_notify_repeatedly">pref_key_notify_repeatedly</string>
    <string name="pref_title_notify_repeatedly">Notify me of registration errors every time</string>
    <string name="pref_content_notify_repeatedly">Notify me of existing errors repeatedly even if there\'s no change on my course list just to be safe (E.g. there could be server side course changes)</string>
    <string name="pref_key_schedule_register">pref_key_schedule_register</string>
    <string name="pref_title_schedule_register">Schedule a registration</string>
    <string name="pref_content_schedule_register">Schedule a registration to run at a specific time, perhaps your registration date</string>
    <string name="pref_key_cancel_schedule">pref_key_cancel_schedule</string>
    <string name="pref_title_cancel_schedule">Cancel scheduled registration</string>
    <string name="pref_content_cancel_schedule">Cancel a scheduled registration, it\'s OK to change your mind :)</string>
    <string name="pref_key_query_interval">pref_key_query_interval</string>
    <string name="pref_title_query_interval">Auto check interval</string>
    <string name="pref_content_query_interval">How often to check for available courses with the server</string>
    <string-array name="pref_names_query_interval">
        <item>1 minutes (Drains battery fastest)</item>
        <item>5 minutes (Drains battery faster)</item>
        <item>10 minutes (Drains battery fast)</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hour</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>6 hours</item>
        <item>8 hours</item>
        <item>16 hours</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>1 week</item>
    </string-array>
    <string-array name="pref_data_query_interval">
        <item>60</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>1200</item>
        <item>1800</item>
        <item>2700</item>
        <item>3600</item>
        <item>7200</item>
        <item>10800</item>
        <item>14400</item>
        <item>21600</item>
        <item>28800</item>
        <item>57600</item>
        <item>86400</item>
        <item>172800</item>
        <item>259200</item>
        <item>604800</item>
    </string-array>
    <string name="pref_key_report_interval">pref_key_summary_interval</string>
    <string name="pref_title_report_interval">Send routine register status report interval</string>
    <string-array name="pref_names_report_interval">
        <item>Never</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>8 hours</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>1 week</item>
        <item>10 days</item>
        <item>2 weeks</item>
    </string-array>
    <string-array name="pref_data_report_interval">
        <item>-1</item>
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>8</item>
        <item>24</item>
        <item>48</item>
        <item>72</item>
        <item>168</item>
        <item>240</item>
        <item>336</item>
    </string-array>
    <string name="statistic_attempt_success_count">statistic_attempt_success_count</string>
    <string name="statistic_attempt_fail_count">statistic_attempt_fail_count</string>
    <string name="statistic_attempt_no_seat_count">statistic_attempt_no_class_count</string>
    <string name="statistic_attempt_total_count">statistic_attempt_total_count</string>
    <string name="started_course_worker">started_course_worker</string>
    <string name="notified_all_errors">notified_all_errors</string>
    <string name="external_changed_list">external_changed_list</string>
    <string name="external_changed_register_status">external_changed_register_status</string>
    <string name="channel_name">Course watcher status updates</string>
    <string name="channel_description">Notifications for status updates for courses on your list</string>
    <string name="register_all_shortcut_short_label">Register All</string>
    <string name="register_all_shortcut_long_label">Register courses on my list</string>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_course">See Course Detail</string>
    <string name="title_activity_course_list">CourseListActivity</string>
    <string name="title_activity_login">Sign in to your UCM account</string>
    <string name="prompt_id">UCMNetID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_id">Invalid UCMNetID</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_login_failed">Login failed, wrong ID and password combination</string>
    <string name="error_field_required">This field is required</string>
    <string name="cas_root_url" translatable="false">https://cas.ucmerced.edu</string>
    <string name="register_status_on_my_list">On my list</string>
    <string name="title_activity_account">AccountActivity</string>
</resources>