<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Course Catalog">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_only_show_open"
            android:summary="@string/pref_description_only_show_open_classes"
            android:title="@string/pref_title_only_show_open_classes" />
        <EditTextPreference
            android:layout_height="wrap_content"
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />
        <MultiSelectListPreference
            android:defaultValue="0"
            android:entries="@array/list_preference_entries"
            android:entryValues="@array/list_preference_entry_values"
            android:key="@string/pref_key_major"
            android:title="Multi select list preference" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="@string/pref_key_term"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_term" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Notifications">

        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="switch_preference_1"
            android:title="@string/pref_title_new_message_notifications" />
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="switch_preference_1"
            android:title="@string/pref_title_vibrate" />
        <RingtonePreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="ringtone_preference_1"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />
    </PreferenceCategory>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
